# smart-screener

./: README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .gitignore  .ruff.toml  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_ingestion_runs.py
backend/app/: __init__.py  main.py
backend/app/api/: metrics.py  routes.py  schemas.py
backend/app/cli/: ingest.py  seed.py
backend/app/core/: config.py  constants.py  logging.py
backend/app/db/: models.py  session.py
backend/app/domain/: allocation.py  explain.py  filtering.py  mapping.py  types.py
backend/app/repositories/: instruments.py  metrics.py
backend/app/services/: portfolio.py
backend/app/services/ingestion/: base.py  yf_ingestor.py
backend/app/services/nlp/: base.py  mock_interpreter.py
backend/tests/: test_allocation.py  test_api_interpret.py  test_api_recommend.py  test_api_screen.py  test_config.py  test_db_models.py  test_errors_logging.py  test_explain.py  test_filtering.py  test_ingestion.py  test_mapping.py  test_metrics_logging.py  test_nlp_mock.py  test_portfolio_service.py  test_rate_limit.py  test_repositories.py  test_seed.py
frontend/: .eslintrc.cjs  .gitignore  Dockerfile  index.html  jest.config.ts  package.json
frontend/src/: App.tsx
frontend/src/__tests__/: HealthCheck.test.tsx  Landing.test.tsx  RecommendFlow.test.tsx  ScreenFlow.test.tsx
frontend/src/api/: client.ts
frontend/src/components/: HealthCheck.tsx  ResultCard.tsx
frontend/src/pages/: Landing.tsx
(+1 files in other folders)
