[project]
name = "smart-screener-backend"
version = "0.1.0"
description = "AI-powered Indian stock screener backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "pydantic-settings",
  "pytest",
  "httpx",
  "ruff",
  "black",
  "isort",
  "mypy",
  "sqlalchemy",
  "alembic",
  "psycopg[binary]",
  "yfinance",
  "vcrpy",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.mypy]
strict = true

[project.scripts]
seed-instruments = "app.cli.seed:main"
ingest-metrics = "app.cli.ingest:main"
